# OpenNote

./: AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml
.serena/: project.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs
src/components/: ErrorBoundary.tsx
src/components/ai/: AISearchPanel.tsx  AgentsPanel.tsx  AiChatAgent.tsx  AiPanel.tsx  AiSettings.tsx  AiToggle.tsx  AutomationsPanel.tsx
src/components/collaboration/: CursorOverlay.tsx  NotificationsPanel.tsx  SharingDialog.tsx
src/components/database/: DatabaseView.tsx  FiltersBar.tsx  PropertyCell.tsx
src/components/database/views/: BoardView.tsx  CalendarView.tsx  ChartView.tsx  (+4 more)
src/components/editor/: BlockEditor.tsx  Breadcrumbs.tsx
src/components/import-export/: ExportDialog.tsx  ImportDialog.tsx
src/components/search/: QuickFind.tsx
src/components/shared/: BacklinksPanel.tsx  CommentsPanel.tsx  EmojiPicker.tsx  PageIcon.tsx  TableOfContentsPanel.tsx  TemplatesGallery.tsx  ToastContainer.tsx  VersionHistory.tsx
src/components/sidebar/: Sidebar.tsx
src/hooks/: useDatabase.ts  useTauriCommands.ts  useYjsSync.ts
src/lib/: browser-state.ts  crypto.ts  editorRef.ts  tauri.ts  utils.ts
src/lib/ai/: action-configs.ts  model-discovery.ts  provider-registry.ts
src/lib/import-export/: csv.ts  html.ts  markdown.ts
src/stores/: ai.ts  collaboration.ts  database.ts  toast.ts  ui.ts  workspace.ts
src/styles/: globals.css
src/types/: ai.ts  comments.ts  database.ts  index.ts
(+1 files in other folders)
